--- a/app/templates/components/current-timer.hbs
+++ b/app/templates/components/current-timer.hbs
@@ -11,7 +11,7 @@
   {{~/if~}}
   : {{@timer.displayDuration}}
 </h1>
-<h2>
+<p>
   <button class="p-2 m-2 border shadow" onclick={{action this.state.toggle @timer}}>
     {{#if this.state.running}}
       Pause
@@ -19,4 +19,11 @@
       Play
     {{/if}}
   </button>
-</h2>
+  <button class="p-2 m-2 border shadow" onclick={{action this.addTime @timer (mult 15 -60)}}>&lt;-15m</button>
+  <button class="p-2 m-2 border shadow" onclick={{action this.addTime @timer (mult 5 -60)}}>&lt;-5m</button>
+  <button class="p-2 m-2 border shadow" onclick={{action this.addTime @timer -60}}>&lt;-1m</button>
+  <button class="p-2 m-2 border shadow" onclick={{action (mut @timer.total) 0}}>0</button>
+  <button class="p-2 m-2 border shadow" onclick={{action this.addTime @timer 60}}>1m-&gt;</button>
+  <button class="p-2 m-2 border shadow" onclick={{action this.addTime @timer (mult 5 60)}}>5m-&gt;</button>
+  <button class="p-2 m-2 border shadow" onclick={{action this.addTime @timer (mult 15 60)}}>15m-&gt;</button>
+</p>
