--- a/app/templates/components/new-timer-form.hbs
+++ b/app/templates/components/new-timer-form.hbs
@@ -1,6 +1,6 @@
 <form onsubmit={{action this.create}}>
   <label> Name
-    <input name="name" class="shadow appearance-none border rounded w-full py-2 px-3 text-grey-darker leading-tight focus:outline-none focus:shadow-outline">
+    <input name="name" autocomplete="off" class="shadow appearance-none border rounded w-full py-2 px-3 text-grey-darker leading-tight focus:outline-none focus:shadow-outline">
   </label>
   <input type="submit" value="New timer"
     class="bg-white hover:bg-grey-lightest text-grey-darkest font-semibold py-2 px-4 border border-grey-light rounded shadow"
