--- a/app/templates/components/timer-list.hbs
+++ b/app/templates/components/timer-list.hbs
@@ -11,3 +11,4 @@
     <button class="p-1 m-1 border shadow text-red" onclick={{action this.state.delTimer timer}}>X</button>
   </p>
 {{/each}}
+<button class="p-1 m-1 border shadow" onclick={{action this.state.zeroAll}}>Zero all</button>
