--- a/app/templates/components/timer-list.hbs
+++ b/app/templates/components/timer-list.hbs
@@ -7,8 +7,8 @@
         {{fa-icon "play"}}
       {{/if}}
     </button>
-    {{timer.name}}
-    <button class="p-1 m-1 border shadow text-red" onclick={{action this.state.delTimer timer}}>X</button>
+    {{timer.name}}: {{timer.displayMinutes}}
+    <button class="p-1 m-1 border shadow text-red float-right" onclick={{action this.state.delTimer timer}}>X</button>
   </p>
 {{/each}}
 <button class="p-1 m-1 border shadow" onclick={{action this.state.zeroAll}}>Zero all</button>
